# rust-control-loop

./: .gitignore  Cargo.toml  LICENSE  todo.md
.github/workflows/: workflow.yml
rusty_backend/: Cargo.toml
rusty_backend/src/control/: control_api.rs
rusty_backend/src/core/: core_types.rs
rusty_backend/src/registry/: mod.rs  task_registry.rs  task_registry_sqlite.rs
rusty_frontend/: Cargo.toml
src/: lib.rs  main.rs
src/control/: control_loop.rs  mod.rs
src/core/: core_types.rs
src/models/: tasks.rs
src/registry/: task_registry.rs  task_registry_sqlite.rs
src/threadpool/: threadpool.rs
