[package]
name = "task_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlite = "0.30.4"

[dev-dependencies]
rstest = "0.17.0"
